--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container d-flex justify-content-center align-items-center vh-100">
-  <div class="card p-4 shadow">
+<div class="container d-flex justify-content-center align-items-center">
+  <div class="card p-4 shadow mt-3">
     <h2 class="text-center mb-4">Edit <%= resource_name.to_s.humanize %></h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -32,12 +32,6 @@
         <%= f.button :submit, "Update", class: 'btn btn-primary' %>
       </div>
     <% end %>
-
-    <h3 class="text-center mt-4">Cancel my account</h3>
-
-    <div class="text-center">
-      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-dark mt-2' %>
-    </div>
 
     <%= link_to "Back", :back, class: 'mt-4' %>
   </div>
