Small style changes

--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -56,8 +56,8 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        <%= link_to "Back to Charities", charities_path, class: "btn btn-success" %>
-        <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-success" %>
+        <%= link_to "Back to Charities", charities_path, class: "btn btn-success mx-3" %>
+        <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-success mx-3" %>
       </div>
   </div>
 </div>
