--- a/app/assets/stylesheets/components/_card_index.scss
+++ b/app/assets/stylesheets/components/_card_index.scss
@@ -69,6 +69,11 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-gap: 60px;
+
+      h2 {
+        font-size: 22px;
+        font-weight: bold;
+      }
     }
   }
 
