--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,14 +15,17 @@ body {
   background-position: center;
 }
 
-
-.search-form {
+.darker{
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  height: 100%;
   position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  width: 100vw;
+  top: 0;
+  left: 0;
 }
+
+
+
 .input-form {
   padding-left: 30px;
   width: 50vw;
@@ -55,11 +58,7 @@ body {
 }
 
 .heading {
-  position: absolute;
-  transform: translateX(-50%);
-  left: 50%;
-  font-size: 5em;
-  top: 14rem;
+ font-size: 8vw;
 }
 
 .log-in-btn,
