--- a/app/views/charities/edit.html.erb
+++ b/app/views/charities/edit.html.erb
@@ -7,25 +7,14 @@
       <h1 class="card-title mb-4">Edit <%= @charity.name %></h1>
         <%= button_to "Delete charity", charity_path(@charity), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger rounded text-white mt-2' %>
     </div>
-      <%= form_with model: @charity do |form| %>
-        <div class="mb-3">
-          <%= form.label :name, class: "form-label" %>
-          <%= form.text_field :name, class: "form-control" %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :address, class: "form-label" %>
-          <%= form.text_field :address, class: "form-control" %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :accepting, class: "form-label" %>
-          <%= form.select :accepting, [['Yes', true], ['No', false]], {selected: @charity.accepting}, {class: "form-select"} %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :cause, class: "form-label" %>
-          <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select me-3 rounded" %>
-        </div>
-        <%= form.submit "Save Changes", class: "btn btn-success" %>
+      <%= simple_form_for @charity do |f| %>
+        <%= f.input :name %>
+        <%= f.input :address %>
+        <%= f.input :accepting %>
+        <%= f.association :cause %>
+        <%= f.submit class: "btn btn-success" %>
       <% end %>
+
       <div class="mt-3">
         <%= link_to "Cancel", charity_path(@charity), class: "btn btn-secondary me-2" %>
         <%= link_to "Back to Charities", charities_path, class: "btn btn-outline-secondary" %>
