--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -2,9 +2,9 @@
 <div class="container">
   <%# categories search  %>
   <div class="search-category mb-4">
-    <%= form_tag charities_path, method: :get, class: 'd-flex my-5' do %>
-      <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select me-3 rounded-pill shadow" %>
-      <%= submit_tag "Search", class: "btn btn-success rounded-pill" %>
+    <%= form_tag charities_path, method: :get, class: 'd-flex my-4' do %>
+      <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select rounded-pill shadow", id: "cause-select" %>
+      <%= submit_tag "Search", class: "btn btn-success mx-2 rounded-pill" %>
     <% end %>
   </div>
 </div>
