Changed background opacity at home page and added description to charity show page

--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -24,6 +24,10 @@
           <th>Cause:</th>
           <td><%= @charity.cause.name %></td>
         </tr>
+        <tr>
+        <th>Description</th>
+        <td><%= @charity.description %></td>
+        </tr>
       </table>
 
       <div>
