Change navbar font for icon

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,5 +16,10 @@
 .navbar-lewagon-transparent {
   background: transparent;
 }
+
+.navbar-logo {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 32px;
+}
 // Move the search category from navbar to the page
 // add class to change the color of the navbar when they are in the index/show page
