--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,12 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'Lato', sans-serif;
 $headers-font: 'Lato', sans-serif;
+$nav-bar-logo-font: 'Roboto Mono', monospace;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
