Added new style for login/signup page

--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -3,8 +3,8 @@
   <%# categories search  %>
   <div class="search-category mb-4">
     <%= form_tag charities_path, method: :get, class: 'd-flex my-4' do %>
-      <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select rounded-pill shadow", id: "cause-select" %>
-      <%= submit_tag "Search", class: "btn btn-success mx-2 rounded-pill" %>
+      <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select shadow", id: "cause-select" %>
+      <%= submit_tag "Search", class: "btn btn-success mx-2 rounded" %>
     <% end %>
   </div>
 </div>
