--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,13 +15,10 @@ body {
   background-position: center;
 }
 
-.darker{
-  background-color: rgba(0,0,0,0.3);
+.bg-shadow {
+  background-color: rgba(0,0,0,0.2);
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 
