--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,15 +14,15 @@
 		})
 		</script>
 <div class="home-container w-100">
-<div class="darker d-flex align-items-center justify-content-center w-100">
+<div class="bg-shadow d-flex align-items-center justify-content-center w-100">
     <div class="text-center d-block w-100" >
 <h1 class="text-white heading"><span id="typed"></span>.</h1>
 
 
 <%# Search bar %>
   <%= form_tag charities_path, method: :get, class: 'text-center search-form d-flex px-5 search-bar' do %>
-    <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select me-3 py-4 rounded-pill" %>
-    <%= submit_tag "Search", class: "btn btn-success rounded-pill" %>
+    <%= select_tag :cause, options_for_select([["All", ""], *Cause.all.map{ |c| [c.name, c.id] }]), prompt: "Select a cause", class: "form-select me-3 py-4" %>
+    <%= submit_tag "Search", class: "btn btn-success" %>
   <% end %>
   </div>
 </div>
