Changed overall style a bit

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,9 +1,10 @@
 .avatar {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   object-fit: cover;
-  border: 2px solid #028748;
+  border: 2px solid white;
+  margin: 0;
 }
 .avatar-large {
   width: 56px;
