--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -39,7 +39,7 @@
   <div class="col-md-12 col-lg-4">
   <div class="card shadow-lg w-100">
         <div class="card-body">
-          <h2 class="text-success">Top donators</h2>
+          <h2 class="text-primary">Top donators</h2>
           <table class="table">
             <thead>
               <tr>
@@ -60,8 +60,8 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        <%= link_to "Back to Charities", charities_path, class: "btn btn-success mx-3" %>
-        <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-success mx-3" %>
+        <%= link_to "Back to Charities", charities_path, class: "btn btn-primary mx-3" %>
+        <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-primary mx-3" %>
       </div>
   </div>
 </div>
