--- a/app/assets/stylesheets/components/_card_index.scss
+++ b/app/assets/stylesheets/components/_card_index.scss
@@ -16,9 +16,9 @@
     .index-card {
       height: 500px;
       border-radius: $border-radius-card;
-      box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.37);
-      -webkit-box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.37);
-      -moz-box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.37);
+      box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.2);
+      -webkit-box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.2);
+      -moz-box-shadow: -1px -1px 10px 1px rgba(0,0,0,0.2);
 
       &:hover {
         scale: 1.01;
@@ -38,6 +38,7 @@
 
       h2 {
         margin-top: 15px;
+        font-size: 24px;
       }
 
       h5 {
