--- a/app/views/charities/new.html.erb
+++ b/app/views/charities/new.html.erb
@@ -24,6 +24,11 @@
         </div>
 
         <div class="form-group mb-2">
+          <%= form.label :description %>
+          <%= form.text_field :description, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-2">
           <%= form.label :accepting %>
           <%= form.select :accepting, [['Yes', true], ['No', false]], {}, class: "form-control" %>
         </div>
@@ -38,7 +43,7 @@
         </div>
 
         <div class="form-actions text-center">
-          <%= form.submit "Create Charity", class: "btn btn-success mt-3" %>
+          <%= form.submit "Create Charity", class: "btn btn-primary mt-3" %>
           <%= link_to "Back to Charities", charities_path, class: "btn btn-secondary mt-3" %>
         </div>
       <% end %>
