--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,10 +30,10 @@
         <% else %>
 <%# If the user is not loged in he gets the login/signup options %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn mt-1" %>
+            <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn my-1" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign up", new_user_registration_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn mt-1" %>
+            <%= link_to "Sign up", new_user_registration_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn my-1" %>
           </li>
         <% end %>
       </ul>
