--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -4,7 +4,11 @@
       <div class="card shadow-lg w-100">
         <div class="card-header d-flex">
           <h1>Welcome back, <%= @user.name %></h1>
-          <%= cl_image_tag current_user.photo.key, class: "avatar my-2 mx-3" %>
+          <% if current_user.photo.attached? %>
+            <%= cl_image_tag current_user.photo.key, class: "avatar my-2 mx-3" %>
+           <% else %>
+            <%= image_tag 'default_profile.jpeg', class: "avatar my-2 mx-3" %>
+          <% end %>
         </div>
         <div class="card-body">
           <h2 class="text-primary">Your Donations</h2>
@@ -16,7 +20,7 @@
     <div class="col-md-12 col-lg-4">
       <div class="card shadow-lg w-100">
         <div class="card-body">
-          <h2 class="text-success">Charities Donated to</h2>
+          <h2 class="text-primary">Charities Donated to</h2>
           <table class="table">
             <thead>
               <tr>
@@ -37,7 +41,7 @@
       </div>
       <div class="card shadow-lg w-100 mt-3">
         <div class="card-body">
-          <h2 class="text-success">Your charities</h2>
+          <h2 class="text-primary">Your charities</h2>
           <table class="table">
             <thead>
               <tr>
