--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -19,10 +19,10 @@
           <%= image_tag 'charity-default.png', alt: "Description of charity", class:"carity-img" %>
         <% end %>
         <div class="content px-4">
-          <h2 class="text-center"><strong><%= charity.name %></strong></h2>
+          <h2 class="text-center card-heading"><strong><%= charity.name %></strong></h2>
           <hr>
-          <h5 class="text-center"><i><%= charity.total_donations %>$ total donations</i></h5>
-          <p class="text-center"><%= charity.cause.name %></p>
+          <h5 class="donations-text"><i><%= charity.total_donations %>$ total donations</i></h5>
+          <p class="cause-text"><%= charity.cause.name %></p>
         </div>
       </div>
     </a>
