--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,13 +9,12 @@
         backDelay:"2500",
         typeSpeed:"9.8",
         backSpeed:"7"
-
     })
 })
 </script>
 
 <div class="home-container w-100">
-  <div class="bg-shadow d-flex align-items-center justify-content-center w-100">
+  <div class="home-page-bg-shadow d-flex align-items-center justify-content-center w-100">
     <div class="text-center d-block">
       <div class="landing-container">
         <%# Typed.js below %>
