--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,7 +14,7 @@ body {
   opacity: 100%;
   background-size: cover;
   background-position: center;
-  .bg-shadow {
+  .home-page-bg-shadow {
     background-color: rgba(0,0,0,0.2);
     width: 100%;
     height: 100%;
@@ -65,7 +65,7 @@ body {
 @media only screen and (max-width: 576px) {
   .home-container{
 
-    .bg-shadow {
+    .home-page-bg-shadow {
 
       .landing-container {
         width: 80%;
