--- a/app/views/charities/edit.html.erb
+++ b/app/views/charities/edit.html.erb
@@ -10,8 +10,10 @@
       <%= simple_form_for @charity do |f| %>
         <%= f.input :name %>
         <%= f.input :address %>
+        <%= f.input :description %>
         <%= f.input :accepting %>
         <%= f.association :cause %>
+        <%= f.input :photo, as: :file %>
         <%= f.submit class: "btn btn-success" %>
       <% end %>
 
